# security-scanner

./: .gitignore  AI_SKILLS.md  CHANGELOG.md  CLAUDE.md  CROSS_PLATFORM_CHANGES.md  CROSS_PLATFORM_GUIDE.md  EMAIL_SETUP.md  GEMINI.md  IMPROVEMENTS.md  INSTALLATION_SUMMARY.txt  INSTALL_INSTRUCTIONS.txt  MENU_CROSS_PLATFORM_UPDATE.md  PRODUCTION_DEPLOYMENT_GUIDE.md  QUICK_START.txt  README.md  README.txt  REDESIGN_EVALUATION.md  SETUP_CHANGES.md  SETUP_COMPLETE.txt  deploy-production.sh  install.sh  menu.sh  pan-sec  pyproject.toml  security-scan.sh  security-scanner.service  security-scanner.timer
config/: email-config.conf  scanner.conf
legacy/: menu.sh  security-scan.sh  send-email.sh  validate-production-ready.sh
legacy/config/: scanner.conf
legacy/modules/: localhost_audit.sh  network_scan.sh  vulnerability_scan.sh
legacy/scripts/: generate-html-report.py  security-scan.sh  send-email-report.sh  setup-cron.sh
lib/: menu_functions.sh
modules/: localhost_audit.sh  network_scan.sh  vulnerability_scan.sh
scripts/: generate-html-report.py  run-scan-and-email.sh
src/security_scanner/: config.py  interactive.py  main.py  reporting.py  schemas.py  utils.py
src/security_scanner/modules/: installer.py  network.py  system.py  tools.py  vuln.py
tests/: test_main.py
