[project]
name = "pan-sec"
version = "2.0.0"
description = "Pan-Sec Security Scanner"
authors = [
    {name = "Paul", email = "nyepaul@gmail.com"},
]
dependencies = [
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "jinja2>=3.1.0",
    "rich>=13.0.0",
]
requires-python = ">=3.10"

[project.scripts]
pan-sec = "security_scanner.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
